Creating a sessions controller, enabling login/logout functionality, limiting the abilities of users not signed in, and modifying views to accomodate these changes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,5 @@ This is the user show
 <%= @user.city %><br />
 <%= @user.age %><br />
 <%= @user.description %><br />
+
+<%= link_to "User's index", users_url %>
