--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<ul>
+	<% if current_user %>
+		Signed in as <%= current_user.email %>
+        <li><%= link_to "Log out", session_path("current"), :method => :delete %></li>
+    <% else %>
+        <li><%= link_to "Log in", new_session_path %></li> 
+        <li><%= link_to "Sign up", new_user_path %></li>
+    <% end %>
+	</ul>
 
-<% if flash[:notice] %>
-	<p><%= flash[:notice] %></p>
-<% end %>
-<% if flash[:alert] %>
-    <p><%= flash[:alert] %></p>
-<% end %>
+	<% if flash[:notice] %>
+		<p><%= flash[:notice] %></p>
+	<% end %>
+	<% if flash[:alert] %>
+	    <p><%= flash[:alert] %></p>
+	<% end %>
 
 <%= yield %>
 
