--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,14 +10,15 @@
   	<tr>
 	    <td><%= user.name %></td>
 	    <td><%= user.email %></td>
+	<% if current_user %>
 	    <td><%= link_to 'Show', user %></td>
 	    <td><%= link_to 'Edit', edit_user_path(user) %></td>
 	    <td><%= link_to "Delete User", user, :confirm => "Are you sure you want to delete this user?", :method => :delete %></td>
+	<% end %>
 	</tr>
  <% end %>
 
  </table>
  
- <br />
+
  
- <%= link_to 'New User', new_user_path %>
