--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,8 +2,8 @@
 	<ul>
 		<li class="oneline"><p class="blue">Budo</p></li>
 		<li><p class="blue">What</p><span class="smalltext">is Budo?</span></li>
-		<li><p class="blue">Help</p><span class="smalltext">find the budo path</span></li>
-		<li><p class="blue">Create</p><span class="smalltext">a path</span></li>
+		<li><p class="blue"><%= link_to "Help", goals_url %></p><span class="smalltext">find the budo path</span></li>
+		<li><p class="blue"><%= link_to "Create", new_goal_path %></p><span class="smalltext">a path</span></li>
 
 	<% if current_user %>
 	    <li class="oneline"><span class="smalltext"><%= link_to "Log out", session_path("current"), :method => :delete %></span></li>
