Creating authorizations for users and goals. has_one assocaition makes build method slightly different than a has_many association. Adding before filters for being signed_in/current_user, and being the correct_user.

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -12,8 +12,10 @@
 	    <td><%= goal.cost %></td>
 	<% if current_user %>
 	    <td><%= link_to 'Show', goal %></td>
+	 <% if current_user == goal.user %>  
 	    <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
 	    <td><%= link_to "Delete", goal, :confirm => "Are you sure you want to delete this goal?", :method => :delete %></td>
+	   <% end %>
 	<% end %>
 	</tr>
  <% end %>
