--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,8 +12,10 @@
 	    <td><%= user.email %></td>
 	<% if current_user %>
 	    <td><%= link_to 'Show', user %></td>
+	    <% if current_user == user %>
 	    <td><%= link_to 'Edit', edit_user_path(user) %></td>
 	    <td><%= link_to "Delete User", user, :confirm => "Are you sure you want to delete this user?", :method => :delete %></td>
+	    <% end %>
 	<% end %>
 	</tr>
  <% end %>
